--- a/hugo.toml
+++ b/hugo.toml
@@ -143,7 +143,8 @@ theme = "DoIt"
     hugo = true
     #  Hosted on (HTML format is supported)
     # <a title="Github Pages" href="https://docs.github.com/en/pages/" target="_blank" rel="noopener noreffer">GitHub Pages</a>
-    hostedOn = '<a title="Cloudflare Pages" href="https://pages.cloudflare.com/" target="_blank" rel="noopener noreffer">Cloudflare Pages</a>'
+    # hostedOn = '<a title="Cloudflare Pages" href="https://pages.cloudflare.com/" target="_blank" rel="noopener noreffer">Cloudflare Pages</a>'
+    hostedOn = ""
     #  whether to show copyright info
     copyright = true
     #  whether to show the author
